--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>littleapps search</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://cse.google.com/cse.js?cx=967a9236a9c554e8f"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
