--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>littleapps search</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://cse.google.com/cse.js?cx=967a9236a9c554e8f"></script>
-    <link rel="icon" href="ChatGPT Image 18. 5. 2025, 09_15_58.png" type="image/x-icon">
+    <link rel="icon" href="vlastny vyhladavac.png" type="image/x-icon">
 </head>
 
 <body>
