--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sk">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>littleapps search</title>
     <link rel="stylesheet" href="style.css">
