--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>littleapps search</title>
+    <title>Noxio search</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://cse.google.com/cse.js?cx=967a9236a9c554e8f"></script>
     <link rel="icon" href="ChatGPT Image 18. 5. 2025, 09_15_58.png" type="image/x-icon">
 </head>
 
 <body>
-    <h1 class="textstred">littleapps search</h1>
+    <h1 class="textstred">Noxio search</h1>
 
     <!-- Toto je miesto, kde sa automaticky zobrazí vyhľadávač -->
     <form class="search-form" action="https://cse.google.com/cse" method="GET">
@@ -20,6 +20,15 @@
         <input type="hidden" name="ie" value="UTF-8" />
         <button type="submit">🔍</button>
     </form>
+
+    <h2 class="h2center">Sponzors</h2>
+    <div class="parent">
+        <div class="sponzor">
+            <h2>littleapps</h2>
+            <p>We are LittleApps – a small team with a big passion for creating tiny tools that make a difference! 🛠️💖
+            </p>
+        </div>
+    </div>
     <footer>
         <p>&copy littleapps - All Rights Reserved</p>
     </footer>
