--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Noxio search</title>
+    <title>Nexio search</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://cse.google.com/cse.js?cx=967a9236a9c554e8f"></script>
     <link rel="icon" href="icon.png" type="image/x-icon">
 </head>
 
 <body>
-    <h1 class="textstred">Noxio search</h1>
+    <h1 class="textstred">Nexio search</h1>
 
     <!-- Toto je miesto, kde sa automaticky zobrazí vyhľadávač -->
     <form class="search-form" action="https://cse.google.com/cse" method="GET">
