--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <h2>littleapps</h2>
             <p>We are LittleApps – a small team with a big passion for creating tiny tools that make a difference! 🛠️💖
             </p>
+        <div class="sponzor">
+            <h2>Nexio support</h2>
+            <p>https://discord.gg/F6e7Etj6qa</p>
+        </div>
         </div>
     </div>
     <footer>
