--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="sponzor">
             <h2>Nexio support</h2>
-            <p>https://discord.gg/F6e7Etj6qa</p>
+            <a href="#">https://discord.gg/F6e7Etj6qa</a>
         </div>
         </div>
     </div>
