--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="sponzor">
             <h2>Nexio support</h2>
-            <button>https://discord.gg/F6e7Etj6qa</button>
+            <a href="https://discord.gg/F6e7Etj6qa" target: "_blank">https://discord.gg/F6e7Etj6qa</button>
         </div>
         </div>
     </div>
