--- a/tools.html
+++ b/tools.html
@@ -29,6 +29,7 @@
 
     <div>
         <a href="coin.html" class="download-button">Coin toss</a>
+        <a href="random number generator.html" class="download-button">Random Number Generator</a>
     </div>
 
     <script>
